# TI-MSP430-HAL

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
app/Src/: blink.c  blink.elf  blink.hex
include/drivers/: gpio.h
include/hal/: board.h
include/ll/: gpio_ll.h
linker/: README.md
mcu/msp430/ll/: ti_msp430g2.h
startup/: README.md
toolchain/MSP430/cmake/: msp430_toolchain.cmake
